--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="style/login.css">
+    <link rel="stylesheet" th:href="@{style/login.css}">
 </head>
 <body onload="checkLoggedUser()">
 <div class="login-container">
@@ -22,7 +22,6 @@
     <div class="space">
         <hr>
     </div>
-    <a href="/.auth/login/google" class="google-btn">Accedi con Google</a>
     <a href="/.auth/login/aad" class="microsoft-btn">Accedi con Microsoft</a>
 </div>
 
