--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+    <h1 th:text="${user}"></h1>
     <label>
         <input type="text" placeholder="Cerca una canzone...">
     </label>
