--- a/src/main/resources/templates/admin/addSong.html
+++ b/src/main/resources/templates/admin/addSong.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aggiungi una Canzone</title>
 
-    <link rel="stylesheet" href="../style/addSong.css">
+    <link rel="stylesheet" th:href="@{../style/addSong.css}">
 </head>
 <body>
 <div class="form-container">
     <h2>Aggiungi una Canzone</h2>
-    <form action="/admin/addSong" method="post" enctype="multipart/form-data">
+    <form action="/templates/admin/addSong" method="post" enctype="multipart/form-data">
         <label for="song-name">Nome della Canzone:</label>
         <input type="text" id="song-name" name="song_name" required>
 
