rimosso errore di caricamento di login (commentato, da correggere)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
             <h4>Nuova Playlist</h4>
             <label for="playlistName"></label><input type="text" id="playlistName" placeholder="Nome della playlist" style="width:100%; padding:5px;">
             <br><br>
-            <button th:onclick="'addPlaylist('+${user.getEmail()}+')'">Aggiungi</button>
+<!--            <button th:onclick="'addPlaylist('+${user.getEmail()}+')'">Aggiungi</button>-->
             <button onclick="closeModal()">Annulla</button>
         </div>
     </div>
