aggiunto controllo per il path /admin/**, aggiunto ruolo admin agli utenti con attributo role admin

--- a/src/main/resources/templates/admin/addSong.html
+++ b/src/main/resources/templates/admin/addSong.html
@@ -10,7 +10,7 @@
 <body>
 <div class="form-container">
     <h2>Aggiungi una Canzone</h2>
-    <form action="/templates/admin/addSong" method="post" enctype="multipart/form-data">
+    <form action="/admin/saveSong" method="post" enctype="multipart/form-data">
         <label for="song-name">Nome della Canzone:</label>
         <input type="text" id="song-name" name="song_name" required>
 
