prova login nuovo

--- a/src/main/resources/templates/provalogin.html
+++ b/src/main/resources/templates/provalogin.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="login-container">
-    <a href="/,auth/login/aad" class="microsoft-btn">Accedi con Microsoft</a>
-    <a href="/,auth/login/google" class="google-btn">Accedi con Microsoft</a>
+    <a href="/.auth/login/aad" class="microsoft-btn">Accedi con Microsoft</a>
+    <a href="/.auth/login/google" class="google-btn">Accedi con Microsoft</a>
 </div>
 </body>
 </html>
