--- a/src/main/resources/static/style/login.css
+++ b/src/main/resources/static/style/login.css
@@ -5,26 +5,27 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #333333;
+    color: white;
 }
 .login-container {
     background: #222222;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    display: flex;
 }
 
 .login-container a {
     display: block;
     width: 100%;
-    margin: 5px 0;
-    padding: 10px 0;
+    margin: 5px 5px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     border-radius: 5px;
     color: white;
     font-weight: bold;
+
 }
 
-.microsoft-btn { background: darkblue; }
-.google-btn{ background: darkred; }
+.microsoft-btn {background: darkblue;}
