--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -6,6 +6,8 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+	background-color: #333333;
+	overflow-y: auto;
 }
 header {
     background: #222222;
@@ -45,9 +47,9 @@ header input {
 }
 .container {
     display: flex;
-    flex: 1;
-    height: 84%;
-    width: 100%;
+	width: 100%;
+    height: calc(100vh - 16%);
+	box-sizing: border-box;
     position: fixed;
     z-index: -1;
 }
@@ -57,13 +59,25 @@ aside {
     background: #333333;
     color: white;
     padding: 10px;
-    display: block;
+	border-right: 2px solid #222222;
+	transition:  ease-in-out 0.5s;
+	transform: translateX(0);
+	opacity: 1;
+}
+aside.toggle {
+	width: 0;
+	overflow: hidden;
+	opacity: 0;
+	transform: translateX(-100%);
 }
 main {
-    flex: 1;
     padding: 10px;
     background-color: #333333;
-    border-left: 2px solid #222222;
+	overflow: auto;
+	width: 80%;
+}
+main.toggle {
+	width: 100%;
 }
 #song-list {
     list-style: none;
@@ -73,6 +87,7 @@ main {
     padding: 10px;
     border-bottom: 1px solid #ddd;
     cursor: pointer;
+	left: 0;
 }
 footer#player {
     background: #222222;
@@ -107,8 +122,42 @@ a:hover, li p:hover{
     cursor: pointer;
 }
 
+button#toggleAside {
+	background: none;
+	border: none;
+	color: white;
+	font-size: large;
+	cursor: pointer;
+	position: absolute;
+	left: 18%;
+}
+
 @media screen and (max-width: 800px) {
     aside {
-        display: none;
+        width: 0;
+		overflow: hidden;
+		transform: translateX(-100%);
+		opacity: 0;
     }
+
+	aside.toggle {
+		width: 100%;
+		transition:  ease-in-out 0.5s;
+		transform: translateX(0);
+		opacity: 1;
+	}
+
+	main {
+		width: 100%;
+	}
+
+	main.toggle {
+		width: 0;
+		transform: translateX(100%);
+		opacity: 0;
+	}
+	
+ 	button#toggleAside {
+		left: 0;
+	}
 }
