--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -15,16 +15,33 @@ header {
     color: white;
     text-align: center;
     display: flex;
-    justify-content: center;
+	justify-content: center;
     align-items: center;
     position: fixed;
     top: 0;
     width: 100%;
     height: 8%;
 }
-header input {
-    width: 80%;
+.search-container input {
     padding: 8px;
+	width: auto;
+}
+.search-container {
+	position: relative;
+	display: inline-block;
+	width: 100%;
+}
+.search-container button {
+	position: absolute;
+    right: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+	background: none;
+	border: none;
+}
+
+.search-container button:hover {
+	cursor: pointer;
 }
 .profile {
     position: absolute;
@@ -130,6 +147,11 @@ button#toggleAside {
 	cursor: pointer;
 	position: absolute;
 	left: 18%;
+	transition: ease-in-out 0.5s;
+}
+button#toggleAside.toggle {
+	left: 0;
+	transition: ease-in-out 0.5s;
 }
 
 @media screen and (max-width: 800px) {
