aggiornato Spring Boot alla versione 3.4.4, migliorata gestione del login

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -154,6 +154,25 @@ button#toggleAside.toggle {
 	transition: ease-in-out 0.5s;
 }
 
+#playlistModal {
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:rgba(0,0,0,0.5);
+}
+
+.modal-content {
+	background:#fff;
+	padding:20px;
+	width:300px;
+	margin:100px auto;
+	border-radius:5px;
+	text-align:center;
+}
+
 @media screen and (max-width: 800px) {
     aside {
         width: 0;
