--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,8 +37,8 @@
         <h4 style="cursor: pointer" onclick="openModal()">Crea una playlist</h4>
         <ul id="playlists"></ul>
     </aside>
-    <div id="playlistModal" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5);">
-        <div class="modal-content" style="background:#fff; padding:20px; width:300px; margin:100px auto; border-radius:5px; text-align:center;">
+    <div id="playlistModal" class="modal">
+        <div class="modal-content">
             <h4>Nuova Playlist</h4>
             <label for="playlistName"></label><input type="text" id="playlistName" placeholder="Nome della playlist" style="width:100%; padding:5px;">
             <br><br>
