rimosso il supporto per le playlist, aggiunta gestione delle canzoni preferite per gli utenti

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -154,7 +154,7 @@ button#toggleAside.toggle {
 	transition: ease-in-out 0.5s;
 }
 
-#playlistModal {
+.modal {
 	display:none;
 	position:fixed;
 	top:0;
