--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -154,23 +154,26 @@ button#toggleAside.toggle {
 	transition: ease-in-out 0.5s;
 }
 
-.modal {
-	display:none;
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background:rgba(0,0,0,0.5);
+#song-info{
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	padding: 10px;
+	background-color: #444444;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+	visibility: hidden;
+	max-height: 50%;
+	min-width: 15%;
+	display: list-item;
 }
 
-.modal-content {
-	background:#fff;
-	padding:20px;
-	width:300px;
-	margin:100px auto;
-	border-radius:5px;
-	text-align:center;
+#song-info p#info-name {
+	font-size: 100%
+}
+
+#song-info p#info-singer {
+	font-size: 70%;
 }
 
 @media screen and (max-width: 800px) {
@@ -190,6 +193,7 @@ button#toggleAside.toggle {
 
 	main {
 		width: 100%;
+		margin-bottom: 10px;
 	}
 
 	main.toggle {
@@ -200,5 +204,26 @@ button#toggleAside.toggle {
 	
  	button#toggleAside {
 		left: 0;
+	}
+
+	#song-info {
+		position: absolute;
+		bottom: 10px;
+		left: 10px;
+		max-width: 20%;
+		max-height: 40%;
+	}
+
+	#song-info p#info-name {
+		font-size: 70%
+	}
+	
+	#song-info p#info-singer {
+		font-size: 60%;
+		margin-bottom: 10px;
+	}
+
+	audio {
+		width: 50%;
 	}
 }
