--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -114,7 +114,9 @@ footer#player {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 8%;
+    height:fit-content;
+	display: inline-flex;
+	justify-content: center;
 }
 
 .profile img {
@@ -207,23 +209,24 @@ button#toggleAside.toggle {
 	}
 
 	#song-info {
-		position: absolute;
-		bottom: 10px;
-		left: 10px;
+		position: relative;
+		margin-right: auto;
 		max-width: 20%;
-		max-height: 40%;
+		top: 1px;
+		left: 1px;
 	}
 
 	#song-info p#info-name {
-		font-size: 70%
+		font-size: x-small
 	}
 	
 	#song-info p#info-singer {
-		font-size: 60%;
-		margin-bottom: 10px;
+		font-size: x-small;
 	}
 
 	audio {
-		width: 50%;
+		width: 40%;
+		position: fixed;
+		bottom: 2vh;
 	}
 }
