--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -208,12 +208,19 @@ button#toggleAside.toggle {
 		left: 0;
 	}
 
+	footer#player {
+		display: inline-flex;
+		justify-content: center;
+		align-items: center;
+		padding: 30px 0;
+	}
+
 	#song-info {
 		position: relative;
-		margin-right: auto;
+		width: 35%;
 		height: fit-content;
-		top: 1px;
-		left: 1px;
+		display: none;
+		bottom: 0;
 	}
 
 	#song-info p#info-name {
@@ -225,12 +232,7 @@ button#toggleAside.toggle {
 	}
 
 	audio {
-		width: 10vh;
+		width: 35%;
 		position: relative;
-		margin: auto;
-	}
-
-	footer#player {
-		padding: 30px;
 	}
 }
