--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -111,13 +111,11 @@ footer#player {
     background: #222222;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 5px 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
     height:fit-content;
-	display: inline-flex;
-	justify-content: center;
 }
 
 .profile img {
@@ -158,9 +156,7 @@ button#toggleAside.toggle {
 }
 
 #song-info{
-	position: absolute;
-	bottom: 10px;
-	left: 10px;
+	position: relative;
 	padding: 10px;
 	background-color: #444444;
     border-radius: 8px;
@@ -168,6 +164,7 @@ button#toggleAside.toggle {
 	max-height: 50%;
 	min-width: 15%;
 	display: none;
+	float: left;
 }
 
 #song-info p#info-name {
@@ -176,6 +173,11 @@ button#toggleAside.toggle {
 
 #song-info p#info-singer {
 	font-size: 70%;
+}
+
+#myAudio {
+	position: absolute;
+	justify-self: anchor-center;
 }
 
 @media screen and (max-width: 800px) {
@@ -209,18 +211,17 @@ button#toggleAside.toggle {
 	}
 
 	footer#player {
-		display: inline-flex;
-		justify-content: center;
-		align-items: center;
+		display: block;
 		padding: 30px 0;
 	}
 
 	#song-info {
 		position: relative;
 		width: 35%;
-		height: fit-content;
+		min-height: 50px;
 		display: none;
 		bottom: 0;
+		float: left;
 	}
 
 	#song-info p#info-name {
@@ -234,5 +235,6 @@ button#toggleAside.toggle {
 	audio {
 		width: 35%;
 		position: relative;
+		float: right;
 	}
 }
