--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -115,7 +115,7 @@ footer#player {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height:fit-content;
+    height: 70px;
 }
 
 .profile img {
@@ -213,12 +213,13 @@ button#toggleAside.toggle {
 	footer#player {
 		display: block;
 		padding: 30px 0;
+		height: 50px;
 	}
 
 	#song-info {
 		position: relative;
 		width: 35%;
-		min-height: 50px;
+		min-height: 30px;
 		display: none;
 		bottom: 0;
 		float: left;
@@ -232,9 +233,9 @@ button#toggleAside.toggle {
 		font-size: x-small;
 	}
 
-	audio {
+	#myAudio {
 		width: 35%;
 		position: relative;
-		float: right;
+		float: none;
 	}
 }
