--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -65,10 +65,11 @@ header {
 .container {
     display: flex;
 	width: 100%;
-    height: calc(100vh - 16%);
+    height: 80%;
 	box-sizing: border-box;
     position: fixed;
     z-index: -1;
+	top: 10%;
 }
 aside {
     width: 20%;
@@ -88,11 +89,12 @@ aside.toggle {
 	transform: translateX(-100%);
 }
 main {
-    padding: 10px;
+    padding: 0 10px;
     background-color: #333333;
 	overflow: auto;
 	width: 80%;
-	margin-bottom: 10%;
+	scrollbar-width: 0;
+	margin: 0 0 5% 0;
 }
 main.toggle {
 	width: 100%;
@@ -111,11 +113,11 @@ footer#player {
     background: #222222;
     color: white;
     text-align: center;
-    padding: 5px 10px;
+    padding: 0 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height:fit-content;
 }
 
 .profile img {
@@ -163,8 +165,9 @@ button#toggleAside.toggle {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	max-height: 50%;
 	min-width: 15%;
-	display: none;
+	visibility: hidden;
 	float: left;
+	margin: 2% 0;
 }
 
 #song-info p#info-name {
@@ -178,6 +181,7 @@ button#toggleAside.toggle {
 #myAudio {
 	position: absolute;
 	justify-self: anchor-center;
+	margin: 2% 0;
 }
 
 @media screen and (max-width: 800px) {
@@ -212,7 +216,7 @@ button#toggleAside.toggle {
 
 	footer#player {
 		display: block;
-		padding: 30px 0;
+		padding: 0 10px 30px 10px;
 		height: 50px;
 	}
 
@@ -220,6 +224,7 @@ button#toggleAside.toggle {
 		position: relative;
 		width: 35%;
 		min-height: 30px;
+		visibility: hidden;
 		display: none;
 		bottom: 0;
 		float: left;
