--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Streaming Musicale</title>
 
     <link rel="stylesheet" th:href="@{style/main.css}">
+	<link rel="stylesheet" th:href="@{style/playing.css}">
 	<script type="text/javascript" th:src="@{script/queue.js}"></script>
     <script type="text/javascript" th:src="@{script/index.js}"></script>
 </head>
